--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 title: Digital Humanities Research Institute
 headers:
-    - ["header-1","Header 1"]
-    - ["header-2","Header 2"]
-    - ["header-3","Header 3"]
-    - ["header-4","Header 4"]
+    - ["#header-1","Header 1"]
+    - ["#header-2","Header 2"]
+    - ["#header-3","Header 3"]
+    - ["#header-4","Header 4"]
+    - ["/pages/another-page.html","Separate page"]
 ---
 
 {% include head.html %}
