--- a/pages/about.html
+++ b/pages/about.html
@@ -1,8 +1,45 @@
-<!-- Grant history here -->
+---
+title: Digital Humanities Research Institute
+headers:
+    - ["#contact","Contact"]
+    - ["/pages/about/news.html","News"]
+    - ["/pages/about/media.html","Media"]
+---
 
-Digital humanities skill development is resource intensive. It depends upon a limited number of people to deliver personalized training to relatively small cohorts of scholars at a time—a model that is difficult to fund and harder to scale. While interest in and demand for training in digital humanities research methods increases, our capacity to reach the needs and interests of diverse populations of scholars in the wide range of institutional contexts where they do their work needs to keep pace.
+{% include head.html %}
 
-The "Expanding Communities of Practice" project is an NEH-funded institute aimed at creating a scalable model for improving access to learning DH research methods. In 2018–19, community leaders [LINK] from various humanities organizations (community colleges, HBCUs, museums, libraries, research universities, and liberal arts colleges) attended a skill workshop at The Graduate Center, CUNY. During the year that followed, the community leaders created local institutes based on the DHRI model. Their lessons learned guided the creation of a document on best practices when creating local institutes across the country.
+	<body data-spy="scroll" data-target="#pagenav-group" data-offset="10">
 
-This website aims to make our work public, to provide an open-access curriculum for skill development, as well as offering recommendations for replicating DHRI institutes across organizational and geographic contexts.
+        {% include nav.html %}
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    {% include page-nav.html %}
+                    
+                </div>
+                <div class="col-8">
+                    <section id="page-content">
+                        <div class="row clearfix">
+                            <!-- Grant history here -->
+                            <p class="lead">Digital humanities skill development is resource intensive. It depends upon a limited number of people to deliver personalized training to relatively small cohorts of scholars at a time—a model that is difficult to fund and harder to scale. While interest in and demand for training in digital humanities research methods increases, our capacity to reach the needs and interests of diverse populations of scholars in the wide range of institutional contexts where they do their work needs to keep pace.</p>
+
+                            <p>The "Expanding Communities of Practice" project is an NEH-funded institute aimed at creating a scalable model for improving access to learning DH research methods. In 2018–19, community leaders [LINK] from various humanities organizations (community colleges, HBCUs, museums, libraries, research universities, and liberal arts colleges) attended a skill workshop at The Graduate Center, CUNY. During the year that followed, the community leaders created local institutes based on the DHRI model. Their lessons learned guided the creation of a document on best practices when creating local institutes across the country.</p>
+
+                            <p>This website aims to make our work public, to provide an open-access curriculum for skill development, as well as offering recommendations for replicating DHRI institutes across organizational and geographic contexts.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="col">
+                    <section id="extra">
+                        <!-- extra space -->
+                    </section>
+                </div>
+            </div>
+        </div>
+		
+
+        {% include scripts.html %}
+        {% include _fix-page-nav-scroll.html %}
+	</body>
+</html>
