--- a/megamenu-test.html
+++ b/megamenu-test.html
@@ -1,5 +1,6 @@
 ---
 title: "Digital Humanities Research Institute"
+title_short: "DH Research Institute"
 ---
 <!doctype html>
 <html lang="en">
@@ -19,7 +20,7 @@ title: "Digital Humanities Research Institute"
     <script src="https://kit.fontawesome.com/fc335a03bd.js"></script>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -60,7 +61,8 @@ title: "Digital Humanities Research Institute"
     </script>
     <!-- MegaMenu modified from https://bootstrapious.com/p/bootstrap-mega-menu -->
     <nav class="navbar fixed-top navbar-expand navbar-light bg-white py-3 shadow-sm">
-      <button type="button" id="megamneu" data-toggle="dropdown" aria-expanded="false" class=""><span class="navbar-toggler-icon"></span></button><a href="#" data-toggle="dropdown" class="navbar-brand ml-2">{{ page.title }}</a>
+      <button type="button" id="megamneu" data-toggle="dropdown" aria-expanded="false" class=""><span class="navbar-toggler-icon"></span></button>
+        <a href="#" data-toggle="dropdown" class="navbar-brand ml-2"><span class="d-inline d-sm-none">{{ page.title_short }}</span><span class="d-sm-inline d-none">{{ page.title }}</span></a>
       <div id="navbarContent" class="collapse navbar-collapse d-flex justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item dropdown megamenu">
