--- a/index.html
+++ b/index.html
@@ -44,21 +44,11 @@ title_short: "DH Research Institute"
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+    <script src="{{ 'check_ie.js' | prepend: site.dirs.js }}"></script>
+
   </head>
   <body>
-    <script type="text/javascript">
-      var isIE = /*@cc_on!@*/false || !!document.documentMode;
-      if (isIE) {
-        var ie_div = document.createElement("div");
-        ie_div.innerHTML = "<div class=\"col p-1 mb-3\">Warning: You are using Internet Explorer, which is not entirely supported by our website. Why not try a different browser?</div>";
-        ie_div.setAttribute("id", "ie-warning");
-        ie_div.setAttribute("class", "text-center bg-warning row");
-        document.body.appendChild(ie_div);
-      }
-    </script>
-    
     {% include megamenu.html %}
-
 
     <!-- Jumbotron for smaller screens (xs, sm, md): -->
     <section class="jumbotron text-center">
@@ -67,6 +57,14 @@ title_short: "DH Research Institute"
         <h1 class="jumbotron-heading">Further Expanding Digital Humanities Communities of Practice</h1>
         <p class="lead text-left">The Digital Humanities Research Institute is an intensive, community-oriented, and foundational approach to learning technical skills in service of humanities teaching and learning.</p>
         <p class="text-left">Through seminar-style discussions with leading scholars in digital humanities, hands-on workshops on core technical competencies, and project development labs, participants will become familiar with working from the command line, collaborating with git, programming with Python, querying structured data, creating maps, and analyzing texts computationally. You will also become part of a growing network of institute leaders by developing your own DHRI based on our open, core curriculum to be led at your home institution or organization.</p>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-light">Light</button>
+        <button type="button" class="btn btn-dark">Dark</button>
       </div>
     </section>
 
@@ -78,11 +76,7 @@ title_short: "DH Research Institute"
 
 
     {% include footer.html %}
-
-    <!-- Optional JavaScript: jQuery needs to load first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    {% include _scripts.html %}
+    {% include _development-scripts.html %}<!-- todo: remove on production -->
   </body>
 </html>
