--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ title_short: "DH Research Institute"
   </div>
 </section>
 
+{% include nav/test.html %}
+
 
 <section id="timeline">
   <div class="container-fluid">
