--- a/about/grant-history/index.html
+++ b/about/grant-history/index.html
@@ -13,6 +13,9 @@ title_short: "DH Research Institute"
   </div>
 </section>
 
+<!-- Todo: add quick access to reports here + maybe quotes and personal narratives about why DRI is helpful to participants -->
+
+{% if site.data.grant-history.timeline-active %}
 <section id="timeline">
   <div class="container-fluid">
     <div class="row border-top border-bottom" style="height: 500px; overflow: scroll; background-color:#afb3b6;">
@@ -32,6 +35,6 @@ title_short: "DH Research Institute"
     </div>
   </div>
 </section>
-  
+{% endif %}
 
 {% include footer.html %}
