--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title_short: "DH Research Institute"
 {% include header.html %}
 {% include nav.html %}
 
-<section class="jumbotron text-center">
+<section class="jumbotron text-center" style="background-color:#e9ecef00;">
   <div class="container">
   <img src="/assets/images/logos/{{ 'dhri-round.png' }}" class="img-fluid mb-1" style="height:150px;">
     <h1 class="jumbotron-heading">Further Expanding Digital Humanities Communities of Practice</h1>
@@ -15,16 +15,17 @@ title_short: "DH Research Institute"
   </div>
 </section><!-- ./ Jumbotron -->
 
-
+<!--
 <section id="" class="bg-dark-blue">
   <div class="container-fluid text-white" style="min-height:300px;">
     <p>This is the intro</p>
   </div>
 </section>
-
+-->
+<!--
 {% include nav/test.html %}
-
-
+-->
+<!--
 <section id="timeline">
   <div class="container-fluid">
     <div class="row border-top border-bottom" style="height: 500px; overflow: scroll; background-color:#afb3b6;">
@@ -39,10 +40,10 @@ title_short: "DH Research Institute"
                     <p class="text-small mt-2 font-weight-light">{{ item.text }}</p>
                 </li>
               {% endfor %}
-          </ul><!-- End -->
+          </ul>
         </div>
     </div>
   </div>
 </section>
-
+-->
 {% include footer.html %}
