--- a/people/alumni/index.html
+++ b/people/alumni/index.html
@@ -5,10 +5,24 @@ title_short: "DH Research Institute"
 
 {% include header.html %}
 {% include nav.html %}
+{% include people/_build.html %}
 
-<section id="" class="">
-  <div class="container-fluid text-white" style="min-height:300px;">
-    <p>This is the intro</p>
+<section id="" class="pt-4">
+  {{ leadership_alumni }}
+  
+  <div class="container-fluid text-dark">
+    <h1 class="text-white">Alumni Fellows</h1>
+    <div class="row">
+      {% for person in fellows_alumni %}{% include people/_card.html person=person %}{% endfor %}
+    </div>
+
+    <hr style="border-top: 1px solid rgba(255, 255, 255, 0.1)" />
+
+    <h1 class="text-white">Alumni Faculty</h1>
+    <div class="row">
+      {% for person in faculty_alumni %}{% include people/_card.html person=person %}{% endfor %}
+    </div>
+
   </div>
 </section>
 
