--- a/people/leadership/index.html
+++ b/people/leadership/index.html
@@ -5,10 +5,16 @@ title_short: "DH Research Institute"
 
 {% include header.html %}
 {% include nav.html %}
+{% include people/_build.html %}
 
-<section id="" class="">
-  <div class="container-fluid text-white" style="min-height:300px;">
-    <p>This is the intro</p>
+
+<section id="" class="pt-4">
+  <div class="container-fluid text-dark">
+    <h1 class="text-white">Leadership</h1>
+    <div class="row">
+      {% for person in leadership_current %}{% include people/_card.html person=person %}{% endfor %}
+    </div>
+
   </div>
 </section>
 
