adding people pages

--- a/people/index.html
+++ b/people/index.html
@@ -9,7 +9,7 @@ title_short: "DH Research Institute"
 
 
 <section id="" class="bg-white">
-  <div class="container-fluid pt-4">
+  <div class="container pt-4">
        
     <ul class="nav nav-pills mb-3" id="people-pills-tab" role="tablist">
       {% for x in site.data.people.settings.categories %}
