--- a/people/leadership/index.html
+++ b/people/leadership/index.html
@@ -9,7 +9,7 @@ title_short: "DH Research Institute"
 
 
 <section id="" class="pt-4">
-  <div class="container-fluid text-dark">
+  <div class="container text-dark">
     <h1 class="text-white">Leadership</h1>
     <div class="row">
       {% for person in leadership_current %}{% include people/_card.html person=person %}{% endfor %}
