--- a/people/alumni/index.html
+++ b/people/alumni/index.html
@@ -10,7 +10,7 @@ title_short: "DH Research Institute"
 <section id="" class="pt-4">
   {{ leadership_alumni }}
   
-  <div class="container-fluid text-dark">
+  <div class="container text-dark">
     <h1 class="text-white">Alumni Fellows</h1>
     <div class="row">
       {% for person in fellows_alumni %}{% include people/_card.html person=person %}{% endfor %}
