adding non-fluid containers

--- a/about/grant-history/index.html
+++ b/about/grant-history/index.html
@@ -7,7 +7,7 @@ title_short: "DH Research Institute"
 {% include nav.html %}
 
 <section id="" class="py-4">
-  <div class="container-fluid text-white">
+  <div class="container text-white">
     <h1>{{ site.data.grant-history.header }}</h1>
     {{ site.data.grant-history.main-text }}
   </div>
