--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -7,7 +7,7 @@ title_short: "DH Research Institute"
 {% include nav.html %}
 
 <section id="" class="py-4">
-  <div class="container-fluid text-white">
+  <div class="container text-white">
     <h1>{{ site.data.contact.header }}</h1>
     <p>{{ site.data.contact.main-text }}</p>
   </div>
