--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title_short: "DH Research Institute"
 {% include nav.html %}
 
 <section id="" class="py-4 bg-light">
-  <div class="container-fluid text-dark">
+  <div class="container text-dark">
     <h1>{{ site.data.about.header }}</h1>
     {{ site.data.about.main-text }}
   </div>
