--- a/about/media/index.html
+++ b/about/media/index.html
@@ -7,7 +7,7 @@ title_short: "DH Research Institute"
 {% include nav.html %}
 
 <section id="" class="">
-  <div class="container-fluid text-white" style="min-height:300px;">
+  <div class="container text-white" style="min-height:300px;">
     <p>This is the intro</p>
   </div>
 </section>
