starting to outline gc part

--- a/graduate-center/index.html
+++ b/graduate-center/index.html
@@ -9,6 +9,9 @@ title_short: "DH Research Institute"
 <section id="" class="">
   <div class="container-fluid text-white" style="min-height:300px;">
     <p>This is the intro</p>
+
+    include here also:
+    - link to reports
   </div>
 </section>
 
