adding bit about evaluation from old website, with some updated language

--- a/apply-2020/index.html
+++ b/apply-2020/index.html
@@ -40,6 +40,30 @@ title_short: "DH Research Institute"
       </section>
     </div>
   </div>
+
+
+  <div class="container-fluid bg-light text-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-3">Evaluation of Applications</div>
+        <div class="col-12 col-sm-9">
+          <p>Applications will be evaluated according to the following criteria:</p>
+          <ul>
+            <li>Commitment to attending all 10 days of the June 2020 institute and the virtual follow-ups throughout the year;</li>
+            <li>Demonstrated interest in and responsibility for “digital humanities community building” (This can be through a regional digital humanities group as a volunteer, as a post-doc in a university library, a visiting scholar at a liberal arts college, a faculty member creating a DH reading group, a curator or archivist at a historical society, library, or other humanities-oriented organization. Position title is not important. What is important is your ability to explain your responsibility or interest in building communities of DH practice.);</li>
+            <li>A letter of support from a group, organization, or institution stating they will support your efforts to run a Digital Humanities Research Institute (Support does not have to be financial. It should simply recognize that your activities are recognized and welcomed by the organization.);</li>
+            <li>Interest in helping to build a network of institute leaders through sharing of curricular materials and engaging in online community-support;</li>
+            <li>An articulation of a DH project idea that you find interesting and would like to pursue or have already begun;</li>
+            <li>An explanation of how you confront and overcome technical difficulties you have experienced in the past.</li>
+          </ul>
+          <p>We are looking for participants who represent diverse DH areas of interest (disciplines, methods, project-types), who work at a wide range of institutional types (universities, community colleges, libraries, archives, museums, historical associations), and who reflect an array of professional roles from graduate students to experienced faculty to librarians, administrators, museum curators, archivists and more. Ideal participants will be able to demonstrate strong communication and collaboration skills and a willingness to confront and overcome frustration. No previous technical experience is required. Applications will not be evaluated based on familiarity with existing technologies, though we are happy to hear about your aspirations and the skills you would like to develop for future work.</p>
+          <p>Applications must be received by February 26, 2018.</p>
+          <p>Questions and comments can be directed to info@dhinstitutes.org.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   
 <div class="container-fluid text-dark pt-4 pb-4" style="background-color:#ec9521;">
   <div class="container">
