updates to the apply page

--- a/apply-2020/index.html
+++ b/apply-2020/index.html
@@ -6,6 +6,18 @@ title_short: "DH Research Institute"
 {% include header.html %}
 {% include nav.html %}
 
+
+<div class="container-fluid bg-white p-0">
+<div class="container-fluid text-dark pt-4 pb-4" style="background: rgba(220, 53, 69, 0.3);">
+  <div class="text-center w-100">
+    <p class="lead m-0 font-weight-bold">Applications are due March 2, 2020.</p>
+    <p class="my-2"><a href="http://bit.ly/apply-to-dhri" target="_blank" class="btn btn-danger">Apply now</a></p>
+    <p class="m-0"><small class="text-muted">Questions? This page contains many answers.</small></p>
+    <p class="m-0"><small class="text-muted">If you can't find an answer, reach out to info@dhinstitutes.org.</small></p>
+  </div>
+</div>
+</div>
+
 <div class="container-fluid bg-light text-dark">
   <div class="container">
     <div class="row">
@@ -31,12 +43,12 @@ title_short: "DH Research Institute"
           <li>{{ q.details-requested }}&nbsp;<small class="text-muted">{{ q.why }}</small></li>
         {% endfor %}
         </ul>
-        <h4 style="color:#ec9521;">2. 2-page CV/resume</h3>
+        <h4 style="color:#ec9521;">2. A 2-page CV/resume</h3>
         <p class="lead">We request a CV/resume in order to better understand where you are situated within your institution as well as in your larger field of research and digital humanities (if at all).</p>
         <p><em>The application form will ask for your 2-page CV/resume.</em></p>
-        <h4 style="color:#ec9521;">3. Letter of support</h3>
+        <h4 style="color:#ec9521;">3. A letter of support</h3>
         <p class="lead">We require a letter of agreement from the group the applicant proposes to run a DHRI for, which acknowledges the relationship and the group's willingness to publicize and run the workshop. It needs to be signed by a person in a decision-making role in the organization (and not be yourself). If you intend to run a DHRI at your place of employment, please include a letter from your direct supervisor stating their agreement and support of your efforts.</p>
-        <p><em>The application form will ask for your 2-page CV/resume.</em></p>
+        <p><em>The application form will ask for your letter of support.</em></p>
       </section>
     </div>
   </div>
@@ -44,9 +56,9 @@ title_short: "DH Research Institute"
   <div class="container-fluid text-dark pt-4 pb-4" style="background-color:#ec9521;">
     <div class="text-center w-100">
       <p class="lead m-0 font-weight-bold">Applications are due March 2, 2020.</p>
+      <p class="mt-2"><a href="http://bit.ly/apply-to-dhri" target="_blank" class="btn btn-danger">Apply now</a></p clas>
     </div>
   </div>
-
 
   <div class="container-fluid bg-light text-dark pt-4 mb-4">
     <div class="container">
