more apply now material

--- a/apply-2020/index.html
+++ b/apply-2020/index.html
@@ -1,22 +1,14 @@
 ---
 title: "Digital Humanities Research Institute"
 title_short: "DH Research Institute"
+application-page: true
 ---
 
 {% include header.html %}
 {% include nav.html %}
 
 
-<div class="container-fluid bg-white p-0">
-<div class="container-fluid text-dark pt-4 pb-4" style="background: rgba(220, 53, 69, 0.3);">
-  <div class="text-center w-100">
-    <p class="lead m-0 font-weight-bold">Applications are due March 2, 2020.</p>
-    <p class="my-2"><a href="http://bit.ly/apply-to-dhri" target="_blank" class="btn btn-danger">Apply now</a></p>
-    <p class="m-0"><small class="text-muted">Questions? This page contains many answers.</small></p>
-    <p class="m-0"><small class="text-muted">If you can't find an answer, reach out to info@dhinstitutes.org.</small></p>
-  </div>
-</div>
-</div>
+{% include apply-now.html %}
 
 <div class="container-fluid bg-light text-dark">
   <div class="container">
