--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ title_short: "DH Research Institute"
   </div>
 </section><!-- ./ Jumbotron -->
 
+{% include apply-now.html %}
+
 <!--
 <section id="" class="bg-dark-blue">
   <div class="container-fluid text-white" style="min-height:300px;">
